--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/applepie.html">Apple Pie</a>
+    <ul>
+    <li><a href="recipes/applepie.html">Apple Pie</a></li>
+    <li> <a href="recipes/brsorbet.html">Blackberry Rasberry Sorbet</a></li>
+    <li><a href="recipes/peachpie.html">Peach Pie</a></li>
+</ul>
+    
 </body>
 </html>
