--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -8,6 +8,49 @@
 <body>
     <h1>Apple Pie</h1>
 
+    <img src="../images/applepie.jpeg" alt="Apple Pie" width="310" height="310">
+
+    <h2>Apple Pie by Grandma Ople</h2>
+
+    <p>This amazing apple pie recipe belonged to my grandmother. I have never seen another one quite like it! 
+        It will always be my favorite and has won several first place prizes in local competitions. 
+        It makes the perfect dessert for family dinners or during the holidays.
+    </p>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>8 small Granny Smith apples, or as needed </li>
+        <li> ½ cup unsalted butter </li>
+        <li> 3 tablespoons all-purpose flour </li>
+        <li>  ½ cup white sugar </li>
+        <li> ½ cup packed brown sugar </li>
+        <li>  ¼ cup water </li>
+        <li>  1 (9 inch) double-crust pie pastry, thawed </li>
+    </ul>
+
+    <h4>Steps</h4>
+
+    <ol start="1">
+        <li>Gather the ingredients. Preheat the oven to 425 degrees F (220 degrees C). Peel and core apples, then thinly slice. Set aside.</li>
+        <li>Melt butter in a saucepan over medium heat. Add flour and stir to form a paste; cook until fragrant, about 1 to 2 minutes. Add both sugars and water; bring to a boil. Reduce the heat to low and simmer for 3 to 5 minutes. Remove from the heat</li>
+        <li>Press one pastry into the bottom and up the sides of a 9-inch pie pan. Roll out remaining pastry so it will overhang the pie by about 1/2 inch. Cut pastry into eight 1-inch strips. </li>
+        <li>Place sliced apples into the bottom crust, forming a slight mound. Lay four pastry strips vertically and evenly spaced over apples, using longer strips in the center and shorter strips at the edges.</li>
+        <li>Make a lattice crust: Fold the first and third strips all the way back so they're almost falling off the pie. Lay one of the unused strips perpendicularly over the second and fourth strips, then unfold the first and third strips back into their original position.</li>
+        <li>Fold the second and fourth vertical strips back. Lay one of the three unused strips perpendicularly over top. Unfold the second and fourth strips back into their original position. Repeat Steps 6 and 7 to weave in the last two strips of pastry. Fold and trim excess dough at the edges as necessary, and pinch to secure.</li>
+        <li>Slowly and gently pour sugar-butter mixture over lattice crust, making sure it seeps over sliced apples. Brush some onto lattice, but make sure it doesn't run off the sides.</li>
+        <li>Bake in the preheated oven for 15 minutes. Reduce the temperature to 350 degrees F (175 degrees C) and continue baking until apples are soft, 35 to 45 minutes.</li>
+        <li>Serve and enjoy!</li>
+    </ul>
+
+<h4>Nutrition Facts</h4>
+
+    <ol>
+        <li>Calories: 373</li>
+        <li>Fat: 19g</li>
+        <li>Carbs: 52g</li>
+        <li>Protein: 2g</li>
+    </ol>
 
 
     <a href="../index.html">Home</a>
