Finish Basic HTML Recipe Website

--- a/recipes/brsorbet.html
+++ b/recipes/brsorbet.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blackberry Raspberry Sorbet</title>
 </head>
 <body>
-    
+    <h1>Blackberry Raspberry Sorbet</h1>
+
+    <img src="../images/brs.jpeg" alt="Blackberry Raspberry Sorbet" width="310" height="310">
+
+    <h2>Refreshing Homemade Sorbet</h2>
+
+    <p>Indulge in this delightful and refreshing Blackberry Raspberry Sorbet, perfect for cooling off on a warm day. This recipe combines the rich flavors of blackberries and raspberries into a smooth, icy treat.</p>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>3 cups fresh blackberries</li>
+        <li>1 cup fresh raspberries</li>
+        <li>1 1/2 cups water</li>
+        <li>3/4 cup superfine sugar</li>
+        <li>1/2 cup sour cream</li>
+        <li>Juice of 1 lemon</li>
+        <li>Zest of 1 lemon</li>
+    </ul>
+
+    <h4>Steps</h4>
+
+    <ol>
+        <li>In a bowl, whisk together the sour cream, superfine sugar, lemon juice, and lemon zest until well combined.</li>
+        <li>In a blender, combine the blackberries, raspberries, and the sour cream mixture. Blend until smooth.</li>
+        <li>Add the water to the blender and blend again until the mixture is well combined and smooth.</li>
+        <li>Pour the mixture through a fine-mesh sieve into a bowl to remove seeds and achieve a smoother texture.</li>
+        <li>Transfer the strained mixture into an ice cream maker and freeze according to the manufacturer's instructions until it reaches a sorbet consistency.</li>
+        <li>Once done, transfer the sorbet into a lidded container and freeze for an additional 2 hours to firm up.</li>
+        <li>Serve scoops of the sorbet in bowls or cones and enjoy!</li>
+    </ol>
+
+    <a href="../index.html">Home</a>
+
 </body>
 </html>
