--- a/recipes/peachpie.html
+++ b/recipes/peachpie.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Peach Pie</title>
 </head>
 <body>
-    
+    <h1>Peach Pie</h1>
+
+    <img src="../images/peachpie.jpeg" alt="Peach Pie" width="310" height="310">
+
+    <h2>Classic Homemade Peach Pie</h2>
+
+    <p>Experience the taste of summer with this classic homemade peach pie. Juicy, ripe peaches enveloped in a flaky, buttery crust make for a delightful dessert that's perfect for any occasion.</p>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>2 1/2 pounds fresh peaches (about 6-8 medium peaches), peeled, pitted, and sliced</li>
+        <li>1 cup granulated sugar</li>
+        <li>1/4 cup cornstarch</li>
+        <li>1/4 teaspoon ground cinnamon</li>
+        <li>1 tablespoon lemon juice</li>
+        <li>1 teaspoon pure vanilla extract</li>
+        <li>1/4 teaspoon salt</li>
+        <li>2 tablespoons unsalted butter, cut into small pieces</li>
+        <li>1 large egg, beaten (for egg wash)</li>
+        <li>1 tablespoon coarse sugar (optional, for sprinkling)</li>
+        <li>1 package (14 ounces) refrigerated pie crusts (2 crusts), at room temperature</li>
+    </ul>
+
+    <h4>Steps</h4>
+
+    <ol>
+        <li>Preheat your oven to 425°F (220°C). Place a baking sheet on the lower rack to catch any drips.</li>
+        <li>In a large bowl, combine the sliced peaches, granulated sugar, cornstarch, ground cinnamon, lemon juice, vanilla extract, and salt. Gently toss to mix well and set aside.</li>
+        <li>On a lightly floured surface, roll out one pie crust to fit a 9-inch pie plate. Transfer the crust to the pie plate, allowing the excess to hang over the edges.</li>
+        <li>Pour the peach filling into the prepared crust, spreading it evenly. Dot the filling with small pieces of unsalted butter.</li>
+        <li>Roll out the second pie crust. You can place it over the filling as a whole or cut it into strips to create a lattice pattern. Trim any excess dough and crimp the edges to seal.</li>
+        <li>Brush the top crust with the beaten egg and sprinkle with coarse sugar, if desired.</li>
+        <li>Place the pie on the preheated baking sheet and bake for 20 minutes. Then, reduce the oven temperature to 375°F (190°C) and continue baking for an additional 35-45 minutes, or until the crust is golden brown and the filling is bubbling.</li>
+        <li>If the crust browns too quickly, cover the edges with foil to prevent over-browning.</li>
+        <li>Once done, remove the pie from the oven and let it cool on a wire rack for at least 2 hours before serving. This allows the filling to set properly.</li>
+        <li>Slice and enjoy your homemade peach pie!</li>
+    </ol>
+
+    <a href="../index.html">Home</a>
+
 </body>
 </html>
