--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Dessert Recipes (for Odin Project)</h1>
     <ul>
     <li><a href="recipes/applepie.html">Apple Pie</a></li>
     <li> <a href="recipes/brsorbet.html">Blackberry Rasberry Sorbet</a></li>
